--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <header id="header">
             <div id="logo">
                 <h2>
-                    Sunny Luthra
+                    Matthew Kim
                 </h2>
                 <h4>
-                    Animator / Photographer
+                    2B Computer Engineer
                 </h4>
             </div>
         </header>
@@ -75,13 +75,13 @@
                             </div>
                             <div class="info">
                                 <h2>
-                                    Sunny Luthra
+                                    Matthew Kim
                                 </h2>
                                 <h4>
-                                    Animator / Photographer
+                                    2B Computer Engineer, Class of 2020
                                 </h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                    Student. Innovator. Coder. Gamer. Designer.
                                 </p>
                             </div>
                         </div>
@@ -109,17 +109,17 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
+                                <h3><a href="mailto:Matthew.Kim919@gmail.com">Matthew.Kim919@gmail.com</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-facebook"></i>
+                              <i class="icon-linkedin"></i>
                               <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
-                                <p>Facebook Profile</p>
+                                <h3><a href="https://www.linkedin.com/in/matthew-kim-4b26188b/">matthew-kim-4b26188b</a></h3>
+                                <p>LinkedIn Profile</p>
                               </div>
                             </div>
                           </div>
@@ -127,8 +127,8 @@
                             <div class="item-box clearfix">
                               <i class="icon-twitter"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
-                                <p>Twitter Handle</p>
+                                <h3><a href="http://fb.me/matthew.kim.165">Matthew Kim</a></h3>
+                                <p>Facebook</p>
                               </div>
                             </div>
                           </div>
@@ -183,18 +183,11 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
+                                        University of Waterloo
+                                    </h5><span class="label label-success">2015-Present</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Candidate for Bachelor of Applied Science, Computer Engineering
+                                        President's Scholarship
                                     </p>
                                 </li>
                             </ul>
@@ -270,30 +263,30 @@
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/1" alt="">
+                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
+                                        <a href="http://lorempixel.com/306/306/sports/4" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/2" alt="">
+                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
+                                        <a href="http://lorempixel.com/306/306/sports/4" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/3" alt="">
+                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
+                                        <a href="http://lorempixel.com/306/306/sports/4" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -311,20 +304,20 @@
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/5" alt="">
+                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a>
+                                        <a href="http://lorempixel.com/306/306/sports/4" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/business/2" alt="">
+                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
+                                        <a href="http://lorempixel.com/306/306/sports/4" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -354,7 +347,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
+                              <p>(+1) 647-707-1683</p>
                             </div>
                          </div>
                        </div>
@@ -377,11 +370,6 @@
             </div>
         </div>
         <!-- End Tab Container -->
-        <footer>
-            <p>
-                Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
-            </p>
-        </footer>
     </div><!-- #main -->
 </div><!-- #main-container -->
 
