updated resume info

--- a/index.html
+++ b/index.html
@@ -146,34 +146,44 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Freelance Web Designer
-                                    </h5><span class="label label-info">2009-2010</span>
+                                        Java Developer
+                                    </h5><span class="label label-info">May. 2017 - Aug. 2017</span>
+                                    <h7>PointClickCare</h7>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        <ul>
+                                            <li>Successfully wrapped a Drools Rule Engine into a Spring Boot REST API web service with over 200 rules and a sample client API.</li>
+                                            <li>Incorporated basic HTTP authentication and support for both JSON and XML input/output using Spring annotations.</li>
+                                            <li>Used JMeter and VisualVM for load testing, ensuring CPU usage was under 5% and controlling garbage collection at 100 requests/sec.</li>
+                                            <li>Strong understanding of the Agile work environment and everyday use of Git/SourceTree to manage version control of all projects.</li>
+                                            <li>Expertise in using the ELK Stack (ElasticSearch, LogStash, Kibana) for log analysis, graphs, and dashboards.</li>
+                                        </ul>
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Python Programmer
-                                    </h5><span class="label label-info">2010-2011</span>
+                                        Automation Engineer
+                                    </h5><span class="label label-info">Jan. - Apr. 2016 & Sep. - Dec. 2016</span>
+                                    <h7>PointClickCare</h7>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        <ul>
+                                            <li>Thoroughly involved in test automation which includes refactoring high level Java classes and page tests in Spring and Selenium, resulting in approximately 300 files committed and over 30 000 lines of code changed.</li>
+                                            <li>Effectively made use of the Page Object and Page Test Design Pattern to improve overall code quality, extensibility, and structure.</li>
+                                            <li>Proficient use of HTML, CSS, and Xpath to repair front-end locator issues, fixing over 50 bugs within the application.</li>
+                                            <li>Strong understanding of the Agile work environment and everyday use of Git/SourceTree to manage version control of all projects.</li>
+                                            <li>Independently automated End-to-End test cases to reduce manual regression tasks on QAs, while achieving 99.9% code coverage on a complex team project. Taught full-time QAs with no prior coding experience the concept of Java and automation.</li>
+                                        </ul>
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
+                                        Website Developer
+                                    </h5><span class="label label-info">Jul. 2014 - Aug. 2014</span>
+                                    <h7>Spot Cinema Inc.</h7>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        <ul>
+                                            <li>Successfully optimized company website up to 50% by combining sprites, browser caching, and defer parsing.</li>
+                                            <li>Increased the Search Engine Optimization by defining key words, adding appropriate page URLs, and improving page content, resulting in the website appearing on the first page of Google.</li>
+                                        </ul>
                                     </p>
                                 </li>
                             </ul>
@@ -186,8 +196,10 @@
                                         University of Waterloo
                                     </h5><span class="label label-success">2015-Present</span>
                                     <p>
-                                        Candidate for Bachelor of Applied Science, Computer Engineering
-                                        President's Scholarship
+                                        <ul>
+                                            <li>Candidate for Bachelor of Applied Science, Computer Engineering</li>
+                                            <li>President's Scholarship</li>
+                                        </ul>
                                     </p>
                                 </li>
                             </ul>
@@ -198,60 +210,59 @@
                                     Skills
                                 </h3>
                                 <h5>
-                                    Software
+                                    Tools and Concepts
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>Photoshop</span></span>
+                                    <span style="width: 90%"><span>Agile</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Illustrator</span></span>
+                                    <span style="width: 75%"><span>Git</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 60%"><span>InDesign</span></span>
+                                    <span style="width: 70%"><span>Subversion</span></span>
                                 </div>
                                 <div class="meter sunflower">
-                                    <span style="width: 40%"><span>Firework</span></span>
+                                    <span style="width: 80%"><span>Object Oriented Programming</span></span>
                                 </div>
-                                <div class="meter midnight">
-                                    <span style="width: 70%"><span>Dreamweaver</span></span>
+                                <div class="meter emerald">
+                                    <span style="width: 70%"><span>MVC</span></span>
                                 </div>
-                                <div class="meter pomengrate">
-                                    <span style="width: 60%"><span>Microsoft Office</span></span>
+                                <div class="meter carrot">
+                                    <span style="width: 75%"><span>REST API</span></span>
                                 </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 65%"><span>Linux</span></span>
+                                <div class="meter wisteria">
+                                    <span style="width: 40%"><span>SQL</span></span>
+                                </div>
+                                <div class="meter sunflower">
+                                    <span style="width: 65%"><span>Spring</span></span>
+                                </div>
+                                <div class="meter emerald">
+                                    <span style="width: 90%"><span>ElasticSearch</span></span>
+                                </div>
+                                 <div class="meter carrot">
+                                    <span style="width: 65%"><span>JMeter & VisualVM</span></span>
                                 </div>
                                 <div class="break"></div>
                                 <h5>
-                                    Design
+                                    Programming Languages
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>User Interface</span></span>
+                                    <span style="width: 80%"><span>Java</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Typography</span></span>
+                                    <span style="width: 60%"><span>C++</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 60%"><span>Web Applications</span></span>
-                                </div>
-                                <div class="break"></div>
-                                <h5>
-                                    Programming Language
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 53.3%"><span>HTML/CSS</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 80%"><span>PHP/MySql</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 95%"><span>jQuery/JavaScript</span></span>
+                                    <span style="width: 50%"><span>C</span></span>
                                 </div>
                                 <div class="meter sunflower">
-                                    <span style="width: 75%"><span>Ruby</span></span>
+                                    <span style="width: 65%"><span>HTML/CSS</span></span>
                                 </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 82%"><span>Python</span></span>
+                                <div class="meter emerald">
+                                    <span style="width: 75%"><span>JSON/XML</span></span>
+                                </div>
+                                <div class="meter carrot">
+                                    <span style="width: 70%"><span>Drools</span></span>
                                 </div>
                             </div>
                         </div>
