--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
+                                <img src="IMG_6196.jpg" alt="Matthew Kim">
                             </div>
                             <div class="info">
                                 <h2>
@@ -148,7 +148,9 @@
                                     <h5>
                                         Java Developer
                                     </h5><span class="label label-info">May. 2017 - Aug. 2017</span>
+                                <li>
                                     <h6>PointClickCare</h6>
+                                </li>
                                     <p>
                                         <ul>
                                             <li>Successfully wrapped a Drools Rule Engine into a Spring Boot REST API web service with over 200 rules and a sample client API.</li>
@@ -163,7 +165,9 @@
                                     <h5>
                                         Automation Engineer
                                     </h5><span class="label label-info">Jan. - Apr. 2016 & Sep. - Dec. 2016</span>
+                                <li>
                                     <h6>PointClickCare</h6>
+                                </li>
                                     <p>
                                         <ul>
                                             <li>Thoroughly involved in test automation which includes refactoring high level Java classes and page tests in Spring and Selenium, resulting in approximately 300 files committed and over 30 000 lines of code changed.</li>
@@ -178,7 +182,9 @@
                                     <h5>
                                         Website Developer
                                     </h5><span class="label label-info">Jul. 2014 - Aug. 2014</span>
-                                    <h6>Spot Cinema Inc.</h6>
+                                <li>
+                                    <h6>PointClickCare</h6>
+                                </li>
                                     <p>
                                         <ul>
                                             <li>Successfully optimized company website up to 50% by combining sprites, browser caching, and defer parsing.</li>
