fixed job company header again again

--- a/index.html
+++ b/index.html
@@ -146,10 +146,8 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Java Developer
+                                        Java Developer, PointClickCare
                                     </h5><span class="label label-info">May. 2017 - Aug. 2017</span>
-                                <li>
-                                    <h6>PointClickCare</h6>
                                     <p>
                                         <ul>
                                             <li>Successfully wrapped a Drools Rule Engine into a Spring Boot REST API web service with over 200 rules and a sample client API.</li>
@@ -160,13 +158,10 @@
                                         </ul>
                                     </p>
                                 </li>
-                                </li>
                                 <li>
                                     <h5>
-                                        Automation Engineer
+                                        Automation Engineer, PointClickCare
                                     </h5><span class="label label-info">Jan. - Apr. 2016 & Sep. - Dec. 2016</span>
-                                <li>
-                                    <h6>PointClickCare</h6>
                                     <p>
                                         <ul>
                                             <li>Thoroughly involved in test automation which includes refactoring high level Java classes and page tests in Spring and Selenium, resulting in approximately 300 files committed and over 30 000 lines of code changed.</li>
@@ -177,20 +172,16 @@
                                         </ul>
                                     </p>
                                 </li>
-                                </li>
                                 <li>
                                     <h5>
-                                        Website Developer
+                                        Website Developer, Spot Cinema Inc.
                                     </h5><span class="label label-info">Jul. 2014 - Aug. 2014</span>
-                                <li>
-                                    <h6>PointClickCare</h6>
                                     <p>
                                         <ul>
                                             <li>Successfully optimized company website up to 50% by combining sprites, browser caching, and defer parsing.</li>
                                             <li>Increased the Search Engine Optimization by defining key words, adding appropriate page URLs, and improving page content, resulting in the website appearing on the first page of Google.</li>
                                         </ul>
                                     </p>
-                                </li>
                                 </li>
                             </ul>
                             <h3>
