--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-email"></i></a></li>
+         <li><a href="#"><i class="fa fa-mail"></i></a></li>
          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="#"><i class="fa fa-github"></i></a></li>
       </ul> <!-- /intro-social -->      	
@@ -109,9 +109,9 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
+   				<img src="images/IMG_6196.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">Work Hard. Play Hard. That's my motto.</p>
    			</div>   			
 
    		</div>   		
@@ -122,7 +122,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<!--<p></p>-->
 
    			<ul class="info-list">
    				<li>
@@ -135,7 +135,10 @@
    				</li>
    				<li>
    					<strong>Education:</strong>
-   					<span>Candidate for Bachelor of Applied Science, University of Waterloo</span>
+   					<span>Candidate for Bachelor of Applied Science, University of Waterloo <br>
+					      ECE, Class of 2020<br>
+					      President's Scholarship
+					</span>
    				</li>
 				<li>
    					<strong>Specialty:</strong>
@@ -161,7 +164,7 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent90"><span>90%</span></div>
 				   	<strong>Java</strong>
 				   </li>
 				   <li>
@@ -177,11 +180,11 @@
 				   	<strong>HTML/CSS</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
+				   	<div class="progress percent85"><span>85%</span></div>
 				   	<strong>ElasticSearch</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent75"><span>75%</span></div>
+				   	<div class="progress percent80"><span>80%</span></div>
 				   	<strong>Drools</strong>
 				   </li>
 				   <li>
@@ -197,7 +200,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Get in Contact" class="button stroke smoothscroll">Hire Me</a>
+   			<a href="#contact" title="Get in Contact" class="button stroke smoothscroll">Get in Contact</a>
    			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
@@ -215,7 +218,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">______________________________</p>
+   			<!--<p class="lead"></p>-->
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -235,7 +238,7 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -245,11 +248,12 @@
 
 	   				<div class="timeline-content">
 	   					<h4>PointClickCare</h4>
-	   					<p>• Successfully wrapped a Drools Rule Engine into a Spring Boot REST API web service with over 200 rules and a sample client API.</p>
-						<p>• Incorporated basic HTTP authentication and support for both JSON and XML input/output using Spring annotations.</p>
-						<p>• Used JMeter and VisualVM for load testing, ensuring CPU usage was under 5% and controlling garbage collection at 100 requests/sec.</p>
-						<p>• Strong understanding of the Agile work environment and everyday use of Git/SourceTree to manage version control of all projects.</p>
-						<p>• Expertise in using the ELK Stack (ElasticSearch, LogStash, Kibana) for log analysis, graphs, and dashboards.</p>
+	   					<p>• Successfully wrapped a Drools Rule Engine into a Spring Boot REST API web service with over 200 rules and a sample client API.<br>
+						   • Incorporated basic HTTP authentication and support for both JSON and XML input/output using Spring annotations.<br>
+						   • Used JMeter and VisualVM for load testing, ensuring CPU usage was under 5% and controlling garbage collection at 100 requests/sec.<br>
+						   • Strong understanding of the Agile work environment and everyday use of Git/SourceTree to manage version control of all projects.<br>
+						   • Expertise in using the ELK Stack (ElasticSearch, LogStash, Kibana) for log analysis, graphs, and dashboards.
+						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -257,21 +261,23 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
 	   					<h3>Automation Engineer</h3>
-	   					<p>Sep. 2016 - Dec. 2016</p>
-						<p>Jan. 2016 - Apr. 2016</p>
+	   					<p>Sep. 2016 - Dec. 2016<br>
+						   Jan. 2016 - Apr. 2016
+						</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>PointClickCare</h4>
-	   					<p>• Thoroughly involved in test automation which includes refactoring high level Java classes and page tests in Spring and Selenium, resulting in approximately 300 files committed and over 30 000 lines of code changed.</p>
-						<p>• Effectively made use of the Page Object and Page Test Design Pattern to improve overall code quality, extensibility, and structure.</p>
-						<p>• Proficient use of HTML, CSS, and Xpath to repair front-end locator issues, fixing over 50 bugs within the application.</p>
-						<p>• Independently automated End-to-End test cases to reduce manual regression tasks on QAs, while achieving 99.9% code coverage on a complex team project. Taught full-time QAs with no prior coding experience the concept of Java and automation.</p>
+	   					<p>• Thoroughly involved in test automation which includes refactoring high level Java classes and page tests in Spring and Selenium, resulting in approximately 300 files committed and over 30 000 lines of code changed.<br>
+						   • Effectively made use of the Page Object and Page Test Design Pattern to improve overall code quality, extensibility, and structure.<br>
+						   • Proficient use of HTML, CSS, and Xpath to repair front-end locator issues, fixing over 50 bugs within the application.<br>
+						   • Independently automated End-to-End test cases to reduce manual regression tasks on QAs, while achieving 99.9% code coverage on a complex team project. Taught full-time QAs with no prior coding experience the concept of Java and automation.
+						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -279,7 +285,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -289,8 +295,9 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Spot Cinema Inc.</h4>
-	   					<p>• Successfully optimized company website up to 50% by combining sprites, browser caching, and defer parsing.</p>
-						<p>• Increased the Search Engine Optimization by defining key words, adding appropriate page URLs, and improving page content, resulting in the website appearing on the first page of Google.</p>
+	   					<p>• Successfully optimized company website up to 50% by combining sprites, browser caching, and defer parsing.<br>
+						   • Increased the Search Engine Optimization by defining key words, adding appropriate page URLs, and improving page content, resulting in the website appearing on the first page of Google.
+						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -316,11 +323,11 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-cogs"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Ontario Skills Robotics Team</h3>
+	   					<h3>Ontario Skills Robotics</h3>
 	   					<p>2015</p>
 	   				</div>
 
@@ -334,11 +341,11 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-cogs"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Skills Canada Robotics Team</h3>
+	   					<h3>Skills Canada Robotics</h3>
 	   					<p>2014</p>
 	   				</div>
 
@@ -352,11 +359,11 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-cogs"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>FIRST Robotics Team</h3>
+	   					<h3>FIRST Robotics</h3>
 	   					<p>2013</p>
 	   				</div>
 
@@ -370,7 +377,7 @@
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-cogs"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -388,7 +395,7 @@
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-cogs"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -406,18 +413,19 @@
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-cogs"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Video Game Design Team</h3>
+	   					<h3>Video Game Design</h3>
 	   					<p>2013 - 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>GameMaker Studio, Construct 2</h4>
-	   					<p>• Effectively used game creation systems such as GameMaker Studio and Construct 2 to design a 2D side-scrolling platform.</p>
-						<p>• Gained expertise in video game design presentation and project life cycles through alpha, beta, and gold design phases.</p>
+	   					<p>• Effectively used game creation systems such as GameMaker Studio and Construct 2 to design a 2D side-scrolling platform.<br>
+						   • Gained expertise in video game design presentation and project life cycles through alpha, beta, and gold design phases.
+						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -865,7 +873,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							506 730
+							506730
 						</h3>
 
 						<h5 class="stat-title">
