minor edits to index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-mail"></i></a></li>
+         <li><a href="#"><i class="fa fa-envelope"></i></a></li>
          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="#"><i class="fa fa-github"></i></a></li>
       </ul> <!-- /intro-social -->      	
@@ -111,7 +111,7 @@
 
    				<img src="images/IMG_6196.jpg" alt="Profile Picture">
 
-   				<p class="lead">Work Hard. Play Hard. That's my motto.</p>
+   				<p class="lead">"Everything in the world has beauty, but not everyone can see."</p>
    			</div>   			
 
    		</div>   		
@@ -160,7 +160,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<!--<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>-->
 
 				<ul class="skill-bars">
 				   <li>
@@ -333,7 +333,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>1st Place</h4>
-	   					<p>Built an Arduino robot that retrieves miscellaneous objects and places them on a tall pyramid.</p>
+	   					<p>•Built an Arduino robot that retrieves miscellaneous objects and places them on a tall pyramid.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -351,7 +351,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Finalist</h4>
-	   					<p>Built an Arduino robot that traces a black line and retrieves a pale. Tested for speed & accuracy.</p>
+	   					<p>•Built an Arduino robot that traces a black line and retrieves a pale. Tested for speed & accuracy.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -369,7 +369,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Finalist</h4>
-	   					<p>Built an Arduino and C++ robot that accurately shoots Frisbee discs using jaguars.</p>
+	   					<p>•Built an Arduino and C++ robot that accurately shoots Frisbee discs using jaguars.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -387,7 +387,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>1st Place</h4>
-	   					<p>Designed a popsicle stick bridge within a given time frame to shoot at a target that was purely tested for strength, and accuracy.</p>
+	   					<p>•Designed a popsicle stick bridge within a given time frame to shoot at a target that was purely tested for strength, and accuracy.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -405,7 +405,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>3rd Place</h4>
-	   					<p>Constructed a cardboard catapult to launch items. Emphasis on accuracy, design, and power.</p>
+	   					<p>•Constructed a cardboard catapult to launch items. Emphasis on accuracy, design, and power.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -894,6 +894,22 @@
 
 						<h5 class="stat-title">
 							Awards
+						</h5>
+
+					</div> <!-- /stat -->
+					
+					<div class="bgrid stat">
+
+						<div class="icon-part">
+							<i class="icon-badge"></i>
+						</div>
+
+						<h3 class="stat-count">
+							838
+						</h3>
+
+						<h5 class="stat-title">
+							Days Until Graduation
 						</h5>
 
 					</div> <!-- /stat -->
