--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-badge"></i>
+							<i class="icon-trophy"></i>
 						</div>
 
 						<h3 class="stat-count">
@@ -901,7 +901,7 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-badge"></i>
+							<i class="icon-graduation-cap"></i>
 						</div>
 
 						<h3 class="stat-count">
