changed icons again

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-pencil-ruler"></i>
+							<i class="icon-desktop"></i>
 						</div>
 
 						<h3 class="stat-count">
@@ -901,7 +901,7 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-graduation-cap"></i>
+							<i class="icon-book"></i>
 						</div>
 
 						<h3 class="stat-count">
