minor edits to index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
 
    				<img src="images/IMG_6196.jpg" alt="Profile Picture">
 
-   				<p class="lead">"Everything in the world has beauty, but not everyone can see."</p>
+   				<p class="lead">"Everything in the world has beauty, but not everyone can see."<br>
+					Born in Seoul, South Korea. Native of Toronto. Love all Toronto sports. Love all things tech.<br>
+					Innovator | Creator | Coder | Designer
+				</p>
    			</div>   			
 
    		</div>   		
@@ -216,7 +219,7 @@
    		<div class="col-twelve">
 
    			<h5>Resume</h5>
-   			<h1>More of my credentials.</h1>
+   			<h1>Some things I've done.</h1>
 
    			<!--<p class="lead"></p>-->
 
@@ -238,7 +241,7 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-code-fork"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -261,7 +264,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-code-fork"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -285,7 +288,7 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-globe"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -377,7 +380,7 @@
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-cogs"></i>
+	   					<i class="fa fa-rocket"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -395,7 +398,7 @@
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-cogs"></i>
+	   					<i class="fa fa-rocket"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -413,7 +416,7 @@
 				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-cogs"></i>
+	   					<i class="fa fa-gamepad"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
@@ -930,7 +933,7 @@
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
-   			<h1>I'd Love To Hear From You.</h1>
+   			<h1>I'd love to hear from you.</h1>
 
    			<p class="lead"></p>
 
