about sec index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
    				<img src="images/IMG_6196.jpg" alt="Profile Picture">
 
    				<p class="lead">"Everything in the world has beauty, but not everyone can see."<br>
-					Born in Seoul, South Korea. Native of Toronto. Love all Toronto sports. Love all things tech.<br>
+					Born in Seoul, South Korea. Native of Toronto.<br>
+					Love all Toronto sports. Love all things tech.<br>
 					Innovator | Creator | Coder | Designer
 				</p>
    			</div>   			
