updated download cv button

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Get in Contact" class="button stroke smoothscroll">Get in Contact</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="resume_cv2.pdf" title="Download CV" class="button button-primary" target="_blank">Download CV</a>
    		</div>   		
    	</div>
 
