--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-         <li><a href="#"><i class="fa fa-github"></i></a></li>
+         <li><a href="#contact"><i class="fa fa-envelope"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/matthew-kim-4b26188b/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://github.com/matty-kim/matty-kim.github.io" target="_blank"><i class="fa fa-github"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
