--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#contact"><i class="fa fa-envelope" class="button stroke smoothscroll"></i></a></li>
+         <li><a href="#contact"><i class="fa fa-envelope" class="smoothscroll"></i></a></li>
          <li><a href="https://www.linkedin.com/in/matthew-kim-4b26188b/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://github.com/matty-kim/matty-kim.github.io" target="_blank"><i class="fa fa-github"></i></a></li>
       </ul> <!-- /intro-social -->      	
