--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	   			<h1>Matthew Kim</h1>
 
 	   			<p class="intro-position">
-	   				<span>2B Computer Engineer</span>
+	   				<span>3A Computer Engineer</span>
 	   				<span>Java Developer</span> 
 	   			</p>
 
