Added UXP Systems work experience

--- a/index.html
+++ b/index.html
@@ -172,27 +172,27 @@
 				   	<strong>Java</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>C++</strong>
+				   	<div class="progress percent70"><span>85%</span></div>
+				   	<strong>Groovy</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent60"><span>60%</span></div>
-				   	<strong>C</strong>
+				   	<strong>C++</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>HTML/CSS</strong>
+				   	<strong>Spring</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent85"><span>80%</span></div>
 				   	<strong>ElasticSearch</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
+				   	<div class="progress percent80"><span>70%</span></div>
 				   	<strong>Drools</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
+				   	<div class="progress percent70"><span>75%</span></div>
 				   	<strong>REST API</strong>
 				   </li>
       
@@ -239,6 +239,29 @@
 
    			<div class="timeline-wrap">
 
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-code-fork"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Software Developer</h3>
+	   					<p>Jan. 2018 - Apr. 2018</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>UXP Systems, an Amdocs Company</h4>
+	   					<p>• Independently designed and developed Java / Groovy classes on the enterprise platform using Spring and IntelliJ IDEA.
+						   • Strong understanding of JSON and XML through Spring integration to create REST APIs. Worked with JavaScript within Postman to validate them.
+						   • Expertise in the JUnit and Spock framework which were used for integration testing. Developed the concept of Behaviour Driven Development.
+					   	   • Tasked with updating Liquibase scripts in Oracle and MariaDB databases. Small work with Bash to implement test scripts.
+						   • Frequent use of Git and Bitbucket to manage version control and migration of multiple projects. Strong familiarity with the Agile environment.
+						</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+				
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
