Minor intro edit

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
    				<p class="lead">"Everything in the world has beauty, but not everyone can see."<br>
 					Born in Seoul, South Korea. Native of Toronto.<br>
 					Love all Toronto sports. Love all things tech.<br>
-					Innovator | Creator | Coder | Designer
+					Innovator | Creator | Developer | Designer
 				</p>
    			</div>   			
 
