Added break lines to UXP paragraph

--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
 
 	   				<div class="timeline-content">
 	   					<h4>UXP Systems, an Amdocs Company</h4>
-	   					<p>• Independently designed and developed Java / Groovy classes on the enterprise platform using Spring and IntelliJ IDEA.
-						   • Strong understanding of JSON and XML through Spring integration to create REST APIs. Worked with JavaScript within Postman to validate them.
-						   • Expertise in the JUnit and Spock framework which were used for integration testing. Developed the concept of Behaviour Driven Development.
-					   	   • Tasked with updating Liquibase scripts in Oracle and MariaDB databases. Small work with Bash to implement test scripts.
-						   • Frequent use of Git and Bitbucket to manage version control and migration of multiple projects. Strong familiarity with the Agile environment.
+	   					<p>• Independently designed and developed Java / Groovy classes on the enterprise platform using Spring and IntelliJ IDEA.<br>
+						   • Strong understanding of JSON and XML through Spring integration to create REST APIs. Worked with JavaScript within Postman to validate them.<br>
+						   • Expertise in the JUnit and Spock framework which were used for integration testing. Developed the concept of Behaviour Driven Development.<br>
+					   	   • Tasked with updating Liquibase scripts in Oracle and MariaDB databases. Small work with Bash to implement test scripts.<br>
+						   • Frequent use of Git and Bitbucket to manage version control and migration of multiple projects. Strong familiarity with the Agile environment.<br>
 						</p>
 	   				</div>
 
